--- a/MyTapperGame-IOS/Base.lproj/Main.storyboard
+++ b/MyTapperGame-IOS/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ocv-9r-xXA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-855" y="136"/>
+            <point key="canvasLocation" x="-855.20000000000005" y="135.38230884557723"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
